# cerebro

./: .gitignore  CHANGELOG.md  CHBMP_EDA.ipynb  Makefile  README.md  local.py  local_analysis.py  local_graph.py  pyproject.toml
.github/workflows/: ci.yml  continuous_improvement.yml
notebooks/: CHBMP EDF Structure.ipynb  CHBMP_EDA.ipynb  Review Analysis JSON.ipynb  test.hdf5
src/: burst_analysis.py  cerebro.py  complexity_analysis.py  connectivity.py  core.py  heart_analysis.py  preprocessing.py  qeeg.py  spectral_analysis.py
src/base/: __init__.py
src/cerebro/: __init__.py  burst_analysis.py  cerebro.py  complexity_analysis.py  connectivity.py  connectivity_analysis.py  heart_analysis.py  pipeline.py  preprocessing.py  qeeg.py  spectral_analysis.py  version.py
src/cerebro/base/: __init__.py  cerebro.py  parser.py
src/cerebro/parser/: __init__.py  brainvision.py  chbmp.py  edf.py  tdbrain.py  tuh_corpus.py
src/cerebro/utils/: writers.py
src/cerebrus/: __init__.py  cerebro.py  connectivity.py  preprocessing.py  qeeg.py  spectral_analysis.py  version.py
src/cerebrus/base/: __init__.py  cerebro.py  parser.py  qeeg.py
src/cerebrus/parser/: brainvision.py  chbmp.py  edf.py  tdbrain.py  tuh_corpus.py
src/cerebrus/utils/: decorators.py  dsp_utils.py  params.py  writers.py
src/parser/: brainvision.py  edf.py
tests/: test_analysis.py  test_application.py  test_base_cerebro.py  test_cerebro.py  test_params.py  test_parser.py  test_qeeg.py  test_version.py  test_writers.py
