[tool.poetry]
name = "cerebro"
version = "0.13.0"
description = "A library for analyzing and visualizing neurological data for the development of Brain computer interfaces and AI-driven application development."
authors = ["Luis Camargo <lcamargo2007@gmail.com>"]
readme = "README.md"
packages = [{include = "cerebro", from = "src"}]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
mne = "^1.6.0"
ruff = "^0.1.6"
black = "^23.11.0"
flask = "^3.0.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flask-testing = "^0.8.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
toml = "^0.10.2"
fooof = "^1.1.0"
neurodsp = "^2.2.1"
networkx = "^3.2.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
extend-ignore = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
